fixed the shift bug in 'ProductCarousel' below 500px

--- a/src/Components/ProductCarousel/ProductCarousel.module.css
+++ b/src/Components/ProductCarousel/ProductCarousel.module.css
@@ -78,6 +78,7 @@
     }
     /* trendItems */
     .trendItems{
+        grid-gap: 0px;
         width: 1000%;
     }
 }
